deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gitsaktechkong
  name: gitsaktechkong
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitsaktechkong
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitsaktechkong
    spec:
      containers:
      - image: kollxia/kongza
        name: kongza
        resources: {}
status: {}
