service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: react-kong
  name: react-kong
  namespace: kong
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: react-kong
  type: ClusterIP
status:
  loadBalancer: {}
